:memo: update readme